--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang
 
+ENV GOTRACEBACK=all
+
 WORKDIR /app/go/src/github.com/bogdan-user/go-ticketing-app 
 
 COPY go.mod .
@@ -8,7 +10,8 @@ COPY go.sum .
 RUN go mod download 
 
 COPY ./services/auth services/auth/
+COPY pkg pkg
 
 RUN go build -o auth services/auth/main.go
 
-CMD ["./auth"]
+CMD [ "./auth" ]
