--- a/infra/k8s/tickets-mongo-depl.yml
+++ b/infra/k8s/tickets-mongo-depl.yml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-mongo-depl
+  name: tickets-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth-mongo
+      app: tickets-mongo
   template:
     metadata:
       labels:
-        app: auth-mongo
+        app: tickets-mongo
     spec:
       containers:
-        - name: auth-mongo
+        - name: tickets-mongo
           image: mongo
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-mongo-srv
+  name: tickets-mongo-srv
 spec:
   selector:
-    app: auth-mongo
+    app: tickets-mongo
   ports:
     - name: db
       protocol: TCP
@@ -32,15 +32,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-mongo-nodeport-service
+  name: tickets-mongo-nodeport-service
 spec:
   type: NodePort
   selector:
-    app: auth-mongo
+    app: tickets-mongo
 
   ports:
     - name: posts
       protocol: TCP
       port: 27017
       targetPort: 27017
-      nodePort: 30090
+      nodePort: 30091
